--- a/DekiApp_pyqt5/Screens/new_weld_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_weld_UI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>794</width>
-    <height>970</height>
+    <width>921</width>
+    <height>920</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,7 +28,7 @@
   <property name="styleSheet">
    <string notr="true">font: 10pt &quot;Arial&quot;;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_5">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -76,7 +76,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>30</height>
+          <height>70</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -221,7 +221,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="SubContent_1" native="true">
+       <widget class="QWidget" name="SubContent" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -483,11 +483,15 @@ QPushButton{
 	background-color: rgb(30, 210, 80);
 }
 
-
 QLineEdit{
 	background-color: (245, 245, 245);
 	color: rgb(121, 121, 121);
 	border: 1px solid rgba(150, 150, 150, 150);
+}
+QLineEdit:!enabled{
+	background-color: rgb(194, 194, 194);
+	font: italic 10pt &quot;Arial&quot;;
+	color: rgb(0, 0, 0);
 }
 
 </string>
@@ -1840,6 +1844,12 @@ QPushButton:checked{
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <property name="spacing">
              <number>2</number>
@@ -1857,43 +1867,20 @@ QPushButton:checked{
              <number>2</number>
             </property>
             <item>
-             <widget class="QWidget" name="docsViewer" native="true">
-              <layout class="QVBoxLayout" name="verticalLayout_5">
-               <property name="spacing">
-                <number>0</number>
-               </property>
-               <property name="leftMargin">
-                <number>0</number>
-               </property>
-               <property name="topMargin">
-                <number>0</number>
-               </property>
-               <property name="rightMargin">
-                <number>0</number>
-               </property>
-               <property name="bottomMargin">
-                <number>2</number>
-               </property>
-               <item>
-                <widget class="QWidget" name="weldDocsView" native="true">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="minimumSize">
-                  <size>
-                   <width>0</width>
-                   <height>0</height>
-                  </size>
-                 </property>
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
+             <widget class="QTabWidget" name="tabWidget">
+              <property name="currentIndex">
+               <number>0</number>
+              </property>
+              <widget class="QWidget" name="drawingDocsViewer">
+               <attribute name="title">
+                <string>Technical drawing</string>
+               </attribute>
+              </widget>
+              <widget class="QWidget" name="wpsDocsViewer">
+               <attribute name="title">
+                <string>WPS document</string>
+               </attribute>
+              </widget>
              </widget>
             </item>
            </layout>
@@ -1938,6 +1925,9 @@ QPushButton:checked{
   <tabstop>wpsMissingCBox</tabstop>
  </tabstops>
  <resources>
+  <include location="../resources.qrc"/>
+  <include location="../resources.qrc"/>
+  <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="C:/Users/Młody/.designer/resources.qrc"/>
  </resources>
