--- a/DekiApp_pyqt5/Screens/subconstruction_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/subconstruction_preview_UI.ui
@@ -4223,7 +4223,7 @@ QPushButton{
  <resources>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
