--- a/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
+++ b/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
@@ -109,7 +109,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>898</width>
+           <width>856</width>
            <height>769</height>
           </rect>
          </property>
@@ -181,6 +181,18 @@
    </item>
    <item>
     <widget class="QWidget" name="rightSidedContent" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>400</width>
+       <height>0</height>
+      </size>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout_8">
       <property name="leftMargin">
        <number>9</number>
