--- a/DekiApp_pyqt5/Screens/inspectionPlannerWindow_UI.ui
+++ b/DekiApp_pyqt5/Screens/inspectionPlannerWindow_UI.ui
@@ -12,8 +12,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>1300</width>
-    <height>900</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -35,7 +35,7 @@
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>50</height>
+           <height>70</height>
           </size>
          </property>
          <property name="styleSheet">
@@ -70,8 +70,8 @@
             </property>
            </widget>
           </item>
-          <item alignment="Qt::AlignLeft">
-           <widget class="QLabel" name="label_8">
+          <item alignment="Qt::AlignHCenter">
+           <widget class="QLabel" name="currentPageLabel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
               <horstretch>0</horstretch>
