--- a/DekiApp_pyqt5/Screens/new_weld_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_weld_UI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>921</width>
+    <width>1570</width>
     <height>920</height>
    </rect>
   </property>
@@ -163,23 +163,6 @@
             <property name="bottomMargin">
              <number>0</number>
             </property>
-            <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-             <widget class="QPushButton" name="minimizeBtn">
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="../resources.qrc">
-                <normaloff>:/Icons/Icons/minus.svg</normaloff>:/Icons/Icons/minus.svg</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>24</width>
-                <height>24</height>
-               </size>
-              </property>
-             </widget>
-            </item>
             <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
              <widget class="QPushButton" name="restoreBtn">
               <property name="text">
@@ -560,16 +543,6 @@ QLineEdit:!enabled{
                           </property>
                           <property name="text">
                            <string>Add WPS .pdf</string>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QPushButton" name="showWPSBtn">
-                          <property name="enabled">
-                           <bool>false</bool>
-                          </property>
-                          <property name="text">
-                           <string>Show WPS</string>
                           </property>
                          </widget>
                         </item>
@@ -1846,7 +1819,7 @@ QPushButton:checked{
            </property>
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>780</width>
              <height>0</height>
             </size>
            </property>
@@ -1905,7 +1878,6 @@ QPushButton:checked{
   <tabstop>pushButton_2</tabstop>
   <tabstop>addWeldBtn</tabstop>
   <tabstop>addWPSBtn</tabstop>
-  <tabstop>showWPSBtn</tabstop>
   <tabstop>TMnotSpecifiedRadioBtn</tabstop>
   <tabstop>testMthdBtnLT</tabstop>
   <tabstop>testMthdBtnMT</tabstop>
@@ -1920,7 +1892,6 @@ QPushButton:checked{
   <tabstop>cornerJointBtn</tabstop>
   <tabstop>staggeredWeldBtn</tabstop>
   <tabstop>normalWeldBtn</tabstop>
-  <tabstop>minimizeBtn</tabstop>
   <tabstop>intermittentWeldBtn</tabstop>
   <tabstop>wpsMissingCBox</tabstop>
  </tabstops>
@@ -1929,7 +1900,7 @@ QPushButton:checked{
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
