--- a/DekiApp_pyqt5/Screens/new_weld_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_weld_UI.ui
@@ -663,16 +663,6 @@ QLineEdit{
                          </property>
                         </widget>
                        </item>
-                       <item row="1" column="1">
-                        <widget class="QLabel" name="label_15">
-                         <property name="text">
-                          <string>to be generated</string>
-                         </property>
-                         <property name="alignment">
-                          <set>Qt::AlignCenter</set>
-                         </property>
-                        </widget>
-                       </item>
                       </layout>
                      </item>
                     </layout>
@@ -1092,28 +1082,6 @@ QLineEdit{
                           </property>
                          </widget>
                         </item>
-                        <item>
-                         <widget class="QPushButton" name="pushButton">
-                          <property name="minimumSize">
-                           <size>
-                            <width>0</width>
-                            <height>26</height>
-                           </size>
-                          </property>
-                          <property name="font">
-                           <font>
-                            <family>Arial 12</family>
-                            <pointsize>10</pointsize>
-                            <weight>9</weight>
-                            <italic>false</italic>
-                            <bold>false</bold>
-                           </font>
-                          </property>
-                          <property name="text">
-                           <string>Show Drawing</string>
-                          </property>
-                         </widget>
-                        </item>
                        </layout>
                       </widget>
                      </item>
@@ -1133,7 +1101,19 @@ QLineEdit{
                        </property>
                        <layout class="QVBoxLayout" name="verticalLayout_10">
                         <property name="spacing">
-                         <number>10</number>
+                         <number>0</number>
+                        </property>
+                        <property name="leftMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="topMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="rightMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="bottomMargin">
+                         <number>0</number>
                         </property>
                         <item>
                          <widget class="QFrame" name="materialSpecsUpper">
@@ -1747,7 +1727,7 @@ QPushButton:checked{
                     </property>
                     <layout class="QHBoxLayout" name="horizontalLayout_3">
                      <item>
-                      <widget class="QPushButton" name="pushButton_2">
+                      <widget class="QPushButton" name="discardBtn">
                        <property name="minimumSize">
                         <size>
                          <width>0</width>
@@ -1765,6 +1745,10 @@ QPushButton:checked{
                        </property>
                        <property name="text">
                         <string>Discard</string>
+                       </property>
+                       <property name="icon">
+                        <iconset resource="../resources.qrc">
+                         <normaloff>:/Icons/Icons/x-octagon.svg</normaloff>:/Icons/Icons/x-octagon.svg</iconset>
                        </property>
                       </widget>
                      </item>
@@ -1789,11 +1773,37 @@ QPushButton:checked{
 }</string>
                        </property>
                        <property name="text">
-                        <string>Add weld</string>
+                        <string>Add single weld</string>
                        </property>
                        <property name="icon">
                         <iconset resource="../resources.qrc">
                          <normaloff>:/Icons/Icons/send.svg</normaloff>:/Icons/Icons/send.svg</iconset>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="addMultipleWeldsBtn">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton{
+	font: 75 10pt &quot;Arial&quot; bold;
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	border: 1px solid rgb(30, 210, 80);
+	background-color: rgb(30, 210, 80);
+}</string>
+                       </property>
+                       <property name="text">
+                        <string>Add multiple welds</string>
+                       </property>
+                       <property name="icon">
+                        <iconset resource="../resources.qrc">
+                         <normaloff>:/Icons/Icons/copy.svg</normaloff>:/Icons/Icons/copy.svg</iconset>
                        </property>
                       </widget>
                      </item>
@@ -1875,7 +1885,7 @@ QPushButton:checked{
   <tabstop>secondMaterialLine</tabstop>
   <tabstop>firstJointPartLine</tabstop>
   <tabstop>secondJointPartLine</tabstop>
-  <tabstop>pushButton_2</tabstop>
+  <tabstop>discardBtn</tabstop>
   <tabstop>addWeldBtn</tabstop>
   <tabstop>addWPSBtn</tabstop>
   <tabstop>TMnotSpecifiedRadioBtn</tabstop>
@@ -1901,6 +1911,8 @@ QPushButton:checked{
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
+  <include location="../resources.qrc"/>
+  <include location="C:/Users/Młody/.designer/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
