--- a/DekiApp_pyqt5/Screens/construction_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/construction_preview_UI.ui
@@ -1807,7 +1807,7 @@ QLineEdit{
            </property>
            <property name="minimumSize">
             <size>
-             <width>600</width>
+             <width>610</width>
              <height>0</height>
             </size>
            </property>
@@ -1878,32 +1878,6 @@ QLineEdit{
                        </property>
                        <property name="text">
                         <string>Weld list:</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item>
-                      <widget class="QPushButton" name="addWeldBtn">
-                       <property name="sizePolicy">
-                        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                         <horstretch>0</horstretch>
-                         <verstretch>0</verstretch>
-                        </sizepolicy>
-                       </property>
-                       <property name="minimumSize">
-                        <size>
-                         <width>140</width>
-                         <height>30</height>
-                        </size>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">color: rgb(0, 0, 0);</string>
-                       </property>
-                       <property name="text">
-                        <string>Add weld</string>
-                       </property>
-                       <property name="icon">
-                        <iconset resource="../resources.qrc">
-                         <normaloff>:/Icons/Icons/plus-circle.svg</normaloff>:/Icons/Icons/plus-circle.svg</iconset>
                        </property>
                       </widget>
                      </item>
@@ -2068,8 +2042,8 @@ QLineEdit{
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>576</width>
-                    <height>680</height>
+                    <width>586</width>
+                    <height>691</height>
                    </rect>
                   </property>
                  </widget>
@@ -2305,7 +2279,7 @@ QLineEdit{
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
