--- a/DekiApp_pyqt5/Screens/subconstruction_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/subconstruction_preview_UI.ui
@@ -246,7 +246,7 @@ QPushButton{
                     <layout class="QVBoxLayout" name="verticalLayout_11">
                      <item>
                       <layout class="QGridLayout" name="gridLayout">
-                       <item row="1" column="0">
+                       <item row="0" column="1">
                         <widget class="QPushButton" name="showCADmodelBtn">
                          <property name="minimumSize">
                           <size>
@@ -259,11 +259,11 @@ QPushButton{
                          </property>
                          <property name="icon">
                           <iconset resource="../resources.qrc">
-                           <normaloff>:/Icons/Icons/arrow-up-right.svg</normaloff>:/Icons/Icons/arrow-up-right.svg</iconset>
+                           <normaloff>:/Icons/Icons/box.svg</normaloff>:/Icons/Icons/box.svg</iconset>
                          </property>
                         </widget>
                        </item>
-                       <item row="0" column="0">
+                       <item row="3" column="1">
                         <widget class="QPushButton" name="show2DdocsBtn">
                          <property name="minimumSize">
                           <size>
@@ -276,12 +276,12 @@ QPushButton{
                          </property>
                          <property name="icon">
                           <iconset resource="../resources.qrc">
-                           <normaloff>:/Icons/Icons/arrow-up-right.svg</normaloff>:/Icons/Icons/arrow-up-right.svg</iconset>
+                           <normaloff>:/Icons/Icons/file.svg</normaloff>:/Icons/Icons/file.svg</iconset>
                          </property>
                         </widget>
                        </item>
-                       <item row="0" column="1">
-                        <widget class="QPushButton" name="editConstructBtn">
+                       <item row="0" column="0">
+                        <widget class="QPushButton" name="showParentConstructionBtn">
                          <property name="minimumSize">
                           <size>
                            <width>0</width>
@@ -289,16 +289,16 @@ QPushButton{
                           </size>
                          </property>
                          <property name="text">
-                          <string>Edit</string>
+                          <string>Go to parent</string>
                          </property>
                          <property name="icon">
                           <iconset resource="../resources.qrc">
-                           <normaloff>:/Icons/Icons/edit-3.svg</normaloff>:/Icons/Icons/edit-3.svg</iconset>
+                           <normaloff>:/Icons/Icons/chevron-left.svg</normaloff>:/Icons/Icons/chevron-left.svg</iconset>
                          </property>
                         </widget>
                        </item>
-                       <item row="1" column="1">
-                        <widget class="QPushButton" name="pushButton">
+                       <item row="3" column="0">
+                        <widget class="QPushButton" name="goToMainConstructionBtn">
                          <property name="minimumSize">
                           <size>
                            <width>0</width>
@@ -306,11 +306,11 @@ QPushButton{
                           </size>
                          </property>
                          <property name="text">
-                          <string>Show </string>
+                          <string>Go to main</string>
                          </property>
                          <property name="icon">
                           <iconset resource="../resources.qrc">
-                           <normaloff>:/Icons/Icons/maximize-2.svg</normaloff>:/Icons/Icons/maximize-2.svg</iconset>
+                           <normaloff>:/Icons/Icons/chevrons-left.svg</normaloff>:/Icons/Icons/chevrons-left.svg</iconset>
                          </property>
                         </widget>
                        </item>
@@ -1673,6 +1673,12 @@ QPushButton{
             </property>
             <item>
              <widget class="QWidget" name="subConstructionInfoContainer" native="true">
+              <property name="minimumSize">
+               <size>
+                <width>800</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="styleSheet">
                <string notr="true">#subConstructionInfoContainer{
 	background-color: rgb(255, 255, 255);
@@ -3930,7 +3936,7 @@ QPushButton{
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
