--- a/DekiApp_pyqt5/Screens/weld_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/weld_preview_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1570</width>
-    <height>920</height>
+    <height>874</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,7 +28,7 @@
   <property name="styleSheet">
    <string notr="true">font: 10pt &quot;Arial&quot;;</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_5">
+  <layout class="QHBoxLayout" name="horizontalLayout_12">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -47,7 +47,10 @@
    <item>
     <widget class="QWidget" name="Content" native="true">
      <property name="styleSheet">
-      <string notr="true"/>
+      <string notr="true">CustomLineEdit[readOnly=&quot;true&quot;] {
+background-color: rgb(230, 230, 230);}
+CustomLineEdit{
+background-color: rgb(255, 255, 255);}</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="spacing">
@@ -417,6 +420,9 @@
                           </item>
                           <item row="0" column="1">
                            <widget class="QLabel" name="parentConstructionLbl">
+                            <property name="styleSheet">
+                             <string notr="true">font: 75 bold 10pt &quot;Arial&quot;;</string>
+                            </property>
                             <property name="text">
                              <string>-</string>
                             </property>
@@ -427,6 +433,9 @@
                           </item>
                           <item row="0" column="3">
                            <widget class="QLabel" name="mainConstructionLbl">
+                            <property name="styleSheet">
+                             <string notr="true">font: 75 bold 10pt &quot;Arial&quot;;</string>
+                            </property>
                             <property name="text">
                              <string>-</string>
                             </property>
@@ -523,6 +532,9 @@ QLineEdit:!enabled{
                        </property>
                        <property name="alignment">
                         <set>Qt::AlignCenter</set>
+                       </property>
+                       <property name="readOnly">
+                        <bool>false</bool>
                        </property>
                        <property name="clearButtonEnabled">
                         <bool>false</bool>
@@ -662,16 +674,6 @@ QLineEdit{
                         <widget class="QLabel" name="label_7">
                          <property name="text">
                           <string>suffix</string>
-                         </property>
-                         <property name="alignment">
-                          <set>Qt::AlignCenter</set>
-                         </property>
-                        </widget>
-                       </item>
-                       <item row="1" column="1">
-                        <widget class="QLabel" name="label_15">
-                         <property name="text">
-                          <string>to be generated</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -985,10 +987,9 @@ QPushButton::!enabled{
 	color: rgb(0, 0, 0);
 	border-radius: 5px;
 	border: 1px solid rgb(30, 210, 80);
-	background-color:  rgb(194, 194, 194);
+	background-color:  rgb(230, 230, 230);
 }
 QPushButton::checked{
-	
 	background-color: rgb(30, 210, 80);
 }
 </string>
@@ -1374,7 +1375,7 @@ QPushButton{
 	color: rgb(0, 0, 0);
 }
 QPushButton:disabled {
-background-color:rgb(194, 194, 194);
+background-color:rgb(230, 230, 230);
 }
 QPushButton:checked{
 	background-color: rgb(30, 210, 80);}
@@ -1716,9 +1717,9 @@ QPushButton:checked{
                              <colorrole role="Button">
                               <brush brushstyle="SolidPattern">
                                <color alpha="255">
-                                <red>194</red>
-                                <green>194</green>
-                                <blue>194</blue>
+                                <red>230</red>
+                                <green>230</green>
+                                <blue>230</blue>
                                </color>
                               </brush>
                              </colorrole>
@@ -1743,18 +1744,18 @@ QPushButton:checked{
                              <colorrole role="Base">
                               <brush brushstyle="SolidPattern">
                                <color alpha="255">
-                                <red>194</red>
-                                <green>194</green>
-                                <blue>194</blue>
+                                <red>230</red>
+                                <green>230</green>
+                                <blue>230</blue>
                                </color>
                               </brush>
                              </colorrole>
                              <colorrole role="Window">
                               <brush brushstyle="SolidPattern">
                                <color alpha="255">
-                                <red>194</red>
-                                <green>194</green>
-                                <blue>194</blue>
+                                <red>230</red>
+                                <green>230</green>
+                                <blue>230</blue>
                                </color>
                               </brush>
                              </colorrole>
@@ -1858,7 +1859,7 @@ QPushButton:checked{
 }</string>
                        </property>
                        <property name="text">
-                        <string>Discard</string>
+                        <string>Discard/Close</string>
                        </property>
                       </widget>
                      </item>
@@ -1888,6 +1889,28 @@ QPushButton:checked{
                        <property name="icon">
                         <iconset resource="../resources.qrc">
                          <normaloff>:/Icons/Icons/send.svg</normaloff>:/Icons/Icons/send.svg</iconset>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="saveAsNewBtn">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton{
+	font: 75 10pt &quot;Arial&quot; bold;
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	border: 1px solid rgb(30, 210, 80);
+	background-color: rgb(30, 210, 80);
+}</string>
+                       </property>
+                       <property name="text">
+                        <string>Save as new</string>
                        </property>
                       </widget>
                      </item>
@@ -1965,7 +1988,7 @@ QPushButton:checked{
   <customwidget>
    <class>CustomLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>weldPreviewDialog_SCRIPT</header>
+   <header>custom_widgets</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -1995,6 +2018,7 @@ QPushButton:checked{
   <tabstop>wpsMissingCBox</tabstop>
  </tabstops>
  <resources>
+  <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
