--- a/DekiApp_pyqt5/Screens/new_weld_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_weld_UI.ui
@@ -1912,7 +1912,7 @@ QPushButton:checked{
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
