--- a/DekiApp_pyqt5/Screens/weldListItem.ui
+++ b/DekiApp_pyqt5/Screens/weldListItem.ui
@@ -72,7 +72,20 @@ background-color: rgb(255, 255, 255);
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true"/>
+      <string notr="true">QPushButton{
+background-color: rgb(255, 255, 255);
+}
+
+#mainFrame{
+	background-color: rgb(255, 255, 255);
+	border: 1px solid rgb(194, 194, 194);
+}
+#mainFrame::hover { 
+	border-width: 4px;
+ 	 border-style: solid;
+ 	 border-color: rgb(30, 210, 80);
+}
+</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -167,7 +180,7 @@ background-color: rgb(255, 255, 255);
               <property name="font">
                <font>
                 <family>MS Shell Dlg 2</family>
-                <pointsize>12</pointsize>
+                <pointsize>11</pointsize>
                 <weight>75</weight>
                 <italic>false</italic>
                 <bold>true</bold>
@@ -175,7 +188,7 @@ background-color: rgb(255, 255, 255);
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">font: 75 bold 12pt &quot;MS Shell Dlg 2&quot;;</string>
+               <string notr="true">font: 75 bold 11pt &quot;MS Shell Dlg 2&quot;;</string>
               </property>
               <property name="frameShape">
                <enum>QFrame::Panel</enum>
@@ -346,7 +359,7 @@ background-color: rgb(255, 255, 255);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">font: 11pt &quot;MS Shell Dlg 2&quot;;</string>
+               <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
               </property>
               <property name="frameShape">
                <enum>QFrame::StyledPanel</enum>
@@ -413,7 +426,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -438,7 +451,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -463,7 +476,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -516,7 +529,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -765,7 +778,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -812,7 +825,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -837,7 +850,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -862,7 +875,7 @@ background-color: rgb(255, 255, 255);
                       <property name="font">
                        <font>
                         <family>MS Shell Dlg 2</family>
-                        <pointsize>11</pointsize>
+                        <pointsize>10</pointsize>
                         <weight>50</weight>
                         <italic>false</italic>
                         <bold>false</bold>
@@ -983,8 +996,8 @@ background-color: rgb(255, 255, 255);
          <property name="spacing">
           <number>1</number>
          </property>
-         <item row="0" column="5">
-          <widget class="QPushButton" name="RTBtn">
+         <item row="0" column="2">
+          <widget class="QPushButton" name="PTBtn">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -999,44 +1012,8 @@ background-color: rgb(255, 255, 255);
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
-             <normaloff>:/Icons/Icons/testingMethodsIcon_rt.png</normaloff>
-             <disabledoff>:/Icons/Icons/testingMethodsIcon_rt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_rt.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>25</width>
-             <height>25</height>
-            </size>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="checked">
-            <bool>false</bool>
-           </property>
-           <property name="flat">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QPushButton" name="MTBtn">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>30</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../resources.qrc">
-             <normaloff>:/Icons/Icons/testingMethodsIcon_mt.png</normaloff>
-             <disabledoff>:/Icons/Icons/testingMethodsIcon_mt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_mt.png</iconset>
+             <normaloff>:/Icons/Icons/testingMethodsIcon_pt.png</normaloff>
+             <disabledoff>:/Icons/Icons/testingMethodsIcon_pt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_pt.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1123,8 +1100,8 @@ background-color: rgb(255, 255, 255);
            </property>
           </widget>
          </item>
-         <item row="0" column="2">
-          <widget class="QPushButton" name="PTBtn">
+         <item row="1" column="2">
+          <widget class="QPushButton" name="MTBtn">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1139,8 +1116,8 @@ background-color: rgb(255, 255, 255);
            </property>
            <property name="icon">
             <iconset resource="../resources.qrc">
-             <normaloff>:/Icons/Icons/testingMethodsIcon_pt.png</normaloff>
-             <disabledoff>:/Icons/Icons/testingMethodsIcon_pt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_pt.png</iconset>
+             <normaloff>:/Icons/Icons/testingMethodsIcon_mt.png</normaloff>
+             <disabledoff>:/Icons/Icons/testingMethodsIcon_mt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_mt.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1156,7 +1133,7 @@ background-color: rgb(255, 255, 255);
            </property>
           </widget>
          </item>
-         <item row="1" column="5">
+         <item row="2" column="1">
           <widget class="QPushButton" name="LTBtn">
            <property name="enabled">
             <bool>false</bool>
@@ -1183,6 +1160,42 @@ background-color: rgb(255, 255, 255);
            </property>
            <property name="checkable">
             <bool>true</bool>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QPushButton" name="RTBtn">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources.qrc">
+             <normaloff>:/Icons/Icons/testingMethodsIcon_rt.png</normaloff>
+             <disabledoff>:/Icons/Icons/testingMethodsIcon_rt.png</disabledoff>:/Icons/Icons/testingMethodsIcon_rt.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>25</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>false</bool>
            </property>
            <property name="flat">
             <bool>true</bool>
